--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSA Prep Hub</title>
-</head>
-<body>
-
-</body>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="logo">&gt; DSA <span>Prep Hub</span></div>
+      <ul class="nav-links">
+        <li><a href="/index.html">Dashboard</a></li>
+        <li><a href="/problems.html">Problems</a></li>
+        <li><a href="/progress.html">Progress</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="hero">
+        <h1 id="greeting">Good morning, Andrew</h1>
+        <button id="beginButton">Begin Today's Problem</button>
+      </div>
+      <div class="infoContainer">
+        <div class="infoBlock" id="streak">
+          <h3>Streak</h3>
+          <p id="streak">1 day</p>
+        </div>
+        <div class="infoBlock" id="problemsSolved">
+          <h3>Problems Solved</h3>
+          <p id="solved">1</p>
+        </div>
+        <div class="infoBlock" id="level">
+          <h3>Level</h3>
+        <p>Easy</p>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
