--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <div class="hero">
         <h1 id="greeting">Good morning, Andrew</h1>
-        <button id="beginButton">Begin Today's Problem</button>
+        <button id="beginButton">Enter Today's Problem</button>
       </div>
       <div class="infoContainer">
         <div class="infoBlock" id="streak">
