--- a/problems.html
+++ b/problems.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Problems</title>
   <link rel="stylesheet" href="styles/style.css" />
-  <script defer src="scripts/problems.js"></script>
+  <script type="module" defer src="scripts/problems.js"></script>
 </head>
 <body>
   <nav class="navbar">
@@ -24,19 +24,15 @@
         <button id="openFormBtn">Insert New Problem</button>
       </div>
 
-      <!-- Problem list -->
       <ul class="problem-list" id="entriesList">
-        <!-- JS appends problems here -->
       </ul>
     </div>
   </main>
 
-  <!-- Modal -->
   <div class="modal hidden" id="modal">
     <div class="modal-content">
       <span class="close-btn" id="closeModal">&times;</span>
 
-      <!-- Form inside modal -->
       <form id="problemForm">
         <h2>Add Problem</h2>
         <div class="form-group">
@@ -46,7 +42,7 @@
 
         <div class="form-group">
           <label for="platform">Platform</label>
-          <select id="platform" name="platform">
+          <select id="platform" name="platform"  required>
             <option value="LeetCode">LeetCode</option>
             <option value="HackerRank">NeetCode</option>
           </select>
@@ -54,7 +50,7 @@
 
         <div class="form-group">
           <label for="difficulty">Difficulty</label>
-          <select id="difficulty" name="difficulty">
+          <select id="difficulty" name="difficulty"  required>
             <option value="Easy">Easy</option>
             <option value="Medium">Medium</option>
             <option value="Hard">Hard</option>
@@ -63,26 +59,26 @@
 
         <div class="form-group">
           <label for="category">Category</label>
-          <input type="text" id="category" name="category" placeholder="e.g., Arrays, DP" />
+          <input type="text" id="category" name="category" placeholder="e.g., Arrays, DP"  required/>
         </div>
 
         <div class="form-group">
           <label for="timeTaken">Time Taken (minutes)</label>
-          <input type="number" id="timeTaken" name="timeTaken" placeholder="e.g., 30" />
+          <input type="number" id="timeTaken" name="timeTaken" placeholder="e.g., 30"  required/>
         </div>
 
         <div class="form-group">
           <label for="language">Language</label>
-          <select id="language" name="language">
-            <option value="java">Java</option>
-            <option value="cpp">C++</option>
-            <option value="python">Python</option>
+          <select id="language" name="language"  required>
+            <option value="Java">Java</option>
+            <option value="C++">C++</option>
+            <option value="Python">Python</option>
           </select>
         </div>
 
         <div class="form-group">
           <label for="dateSolved">Date Solved</label>
-          <input type="date" id="dateSolved" name="dateSolved" />
+          <input type="date" id="dateSolved" name="dateSolved"  required/>
         </div>
 
         <div class="form-group">
@@ -98,8 +94,8 @@
         <button type="submit" class="submit-btn">Add Problem</button>
       </form>
 
-      <!-- Full problem modal view -->
       <div class="problem-detail hidden" id="problemDetail">
+        <button class="delete-btn">Delete Problem Entry</button>
         <h2 id="detailTitle"></h2>
         <p><strong>Platform:</strong> <span id="detailPlatform"></span></p>
         <p><strong>Difficulty:</strong> <span id="detailDifficulty"></span></p>
@@ -107,8 +103,10 @@
         <p><strong>Time Taken:</strong> <span id="detailTime"></span> min</p>
         <p><strong>Language:</strong> <span id="detailLanguage"></span></p>
         <p><strong>Date Solved:</strong> <span id="detailDate"></span></p>
-        <p><strong>Solution:</strong> <span id="detailSolution"></span></p>
-        <p><strong>Reflection:</strong> <span id="detailReflection"></span></p>
+        <strong>Solution:</strong>
+        <pre><code id="detailSolution" class="problem-text"></code></pre>
+        <strong>Reflection:</strong>
+        <pre><code id="detailReflection" class="problem-text"></code></pre>
       </div>
     </div>
   </div>
