--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
       <div class="hero">
-        <h1 id="greeting">Good morning, Andrew</h1>
+        <h1 id="greeting"></h1>
         <button id="beginButton">Enter Today's Problem</button>
       </div>
       <div class="infoContainer">
