--- a/problems.html
+++ b/problems.html
@@ -95,8 +95,8 @@
       </form>
 
       <div class="problem-detail hidden" id="problemDetail">
-        <button class="delete-btn">Delete Problem Entry</button>
-        <h2 id="detailTitle"></h2>
+        <h2 id="detailTitle" ></h2>
+        <p><strong>Problem Id:</strong> <span id="detailId"></span></p>
         <p><strong>Platform:</strong> <span id="detailPlatform"></span></p>
         <p><strong>Difficulty:</strong> <span id="detailDifficulty"></span></p>
         <p><strong>Category:</strong> <span id="detailCategory"></span></p>
@@ -107,6 +107,7 @@
         <pre><code id="detailSolution" class="problem-text"></code></pre>
         <strong>Reflection:</strong>
         <pre><code id="detailReflection" class="problem-text"></code></pre>
+        <button id="delete-btn">Delete Problem Entry</button>
       </div>
     </div>
   </div>
