--- a/problems.html
+++ b/problems.html
@@ -11,10 +11,11 @@
   <nav class="navbar">
     <div class="logo">&gt; DSA <span>Prep Hub</span></div>
     <ul class="nav-links">
-      <li><a href="/index.html">Dashboard</a></li>
-      <li><a href="/problems.html" class="active">Problems</a></li>
-      <li><a href="/progress.html">Progress</a></li>
-    </ul>
+        <li><a href="/index.html">Dashboard</a></li>
+        <li><a href="/problems.html">Problems</a></li>
+        <li><a href="/progress.html">Progress</a></li>
+        <li><a href="/account.html">Account</a></li>
+      </ul>
   </nav>
 
   <main>
@@ -112,4 +113,5 @@
     </div>
   </div>
 </body>
+<script type="module" src="scripts/auth.js"></script>
 </html>
