--- a/progress.html
+++ b/progress.html
@@ -13,10 +13,12 @@
         <li><a href="/index.html">Dashboard</a></li>
         <li><a href="/problems.html">Problems</a></li>
         <li><a href="/progress.html">Progress</a></li>
+        <li><a href="/account.html">Account</a></li>
       </ul>
     </nav>
     <main>
       
     </main>
   </body>
+  <script type="module" src="scripts/auth.js"></script>
 </html>
