--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="/index.html">Dashboard</a></li>
         <li><a href="/problems.html">Problems</a></li>
         <li><a href="/progress.html">Progress</a></li>
+        <li><a href="/account.html">Account</a></li>
       </ul>
     </nav>
     <main>
@@ -22,13 +23,13 @@
         <button id="beginButton">Enter Today's Problem</button>
       </div>
       <div class="infoContainer">
-        <div class="infoBlock" id="streak">
+        <div class="infoBlock" id="streakblock">
           <h3>Streak</h3>
-          <p id="streak">1 day</p>
+          <p id="streak"></p>
         </div>
         <div class="infoBlock" id="problemsSolved">
           <h3>Problems Solved</h3>
-          <p id="solved">1</p>
+          <p id="solved"></p>
         </div>
         <div class="infoBlock" id="level">
           <h3>Level</h3>
@@ -37,4 +38,5 @@
       </div>
     </main>
   </body>
+  <script type="module" src="/scripts/auth.js"></script>
 </html>
