--- a/problems.html
+++ b/problems.html
@@ -12,8 +12,7 @@
     <div class="logo">&gt; DSA <span>Prep Hub</span></div>
     <ul class="nav-links">
         <li><a href="/index.html">Dashboard</a></li>
-        <li><a href="/problems.html">Problems</a></li>
-        <li><a href="/progress.html">Progress</a></li>
+        <li><a href="/problems.html" class="active">Problems</a></li>
         <li><a href="/account.html">Account</a></li>
       </ul>
   </nav>
