--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <nav class="navbar">
       <div class="logo">&gt; DSA <span>Prep Hub</span></div>
       <ul class="nav-links">
-        <li><a href="/index.html">Dashboard</a></li>
+        <li><a href="/index.html" class="active">Dashboard</a></li>
         <li><a href="/problems.html">Problems</a></li>
-        <li><a href="/progress.html">Progress</a></li>
         <li><a href="/account.html">Account</a></li>
       </ul>
     </nav>
