--- a/index.html
+++ b/index.html
@@ -9,26 +9,31 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">&gt; DSA <span>Prep Hub</span></div>
-      <ul class="nav-links">
-        <li><a href="/index.html" class="active">Dashboard</a></li>
-        <li><a href="/problems.html">Problems</a></li>
-        <li><a href="/account.html">Account</a></li>
-      </ul>
-    </nav>
+  <div class="logo">&gt; DSA <span>Prep Hub</span></div>
+  <ul class="nav-links">
+    <li><a href="/index.html">Dashboard</a></li>
+    <li><a href="/problems.html">Problems</a></li>
+    <li><a href="/account.html">Account</a></li>
+  </ul>
+  <div class="theme-toggle-wrapper">
+    <label class="theme-toggle">
+      <input type="checkbox" id="themeToggle">
+      <span class="toggle-slider"></span>
+    </label>
+  </div>
+</nav>
 
     <main>
       <div class="hero">
         <h1 id="greeting">Good Morning, User!</h1>
         <p class="hero-subtitle">Ready to conquer today's coding challenge?</p>
-        <button id="beginButton">🚀 Start Today's Problem</button>
+        <button id="beginButton">Start Today's Problem</button>
       </div>
 
       <div class="stats-grid">
         <div class="stat-card">
           <div class="stat-header">
             <span class="stat-title">Current Streak</span>
-            <div class="stat-icon">🔥</div>
           </div>
           <div class="stat-value" id="streakValue">0</div>
           <div class="stat-label">days in a row</div>
@@ -40,7 +45,7 @@
         <div class="stat-card">
           <div class="stat-header">
             <span class="stat-title">Problems Solved</span>
-            <div class="stat-icon">✓</div>
+
           </div>
           <div class="stat-value" id="solvedValue">0</div>
           <div class="stat-label">total problems</div>
@@ -52,7 +57,6 @@
         <div class="stat-card">
           <div class="stat-header">
             <span class="stat-title">Current Level</span>
-            <div class="stat-icon">⭐</div>
           </div>
           <div class="stat-value level-value" id="levelValue">Easy</div>
           <div class="stat-label">keep pushing!</div>
@@ -96,4 +100,5 @@
     </main>
   </body>
   <script type="module" src="/scripts/auth.js"></script>
+  <script type="module" src="/scripts/theme.js"></script>
 </html>
